# VexIQ

./: .env.example  AGENTS.md  ARCHITECTURE.md  BUG_FIX_AGENT.md  CODE_REVIEW_AGENT.md  DESIGN.md  README.md  ROADMAP.md  pyproject.toml
tests/: __init__.py  test_api.py  test_db.py  test_decision_logger.py  test_detection_signals.py  test_health.py  test_mistake_tracker.py  test_models.py  test_provider_profile.py  test_routing_api.py  test_routing_engine.py  test_stats_api.py  test_tuning.py  test_vexctx_sync.py
vexiq/: __init__.py  config.py  db.py  main.py  models.py
vexiq/api/: __init__.py  decisions.py  health.py  mistakes.py  routing.py  stats.py  sync.py
vexiq/core/: __init__.py  decision_logger.py  detection_signals.py  mistake_tracker.py  provider_profile.py  routing_engine.py  stats_service.py  tune_thresholds.py  vexctx_sync.py
