[project]
name = "vexiq"
version = "0.1.0"
description = "Self-improving AI judgment engine for Vexon OS"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "aiosqlite>=0.20",
  "httpx>=0.27",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
